css/main.css
/* ... */
h3.anidb,
span.anidb {
  color: #8354ee;
  background: none;
}

ul li.rage,
td.rage,
tr.rage,
span.rage,
.rage li.episode {
  background: #ffa500;
}

h3.rage,
span.rage {
  color: #ffa500;
  background: none;
}

ul li.trakt,
td.trakt,
tr.trakt,
span.trakt,
.trakt li.episode {
  background: #008fbb;
}
h3.trakt,
span.trakt {
  color: #008fbb;
  background: none;
}

ul li.master,
td.master,
tr.master,
span.master,
.master li.episode {
  background: #f00;
}
h3.master,
span.master {
  color: #f00;
  background: none;
}

/*donno*/

span.note {
  font-size: 80%;
}

.rule {
  float: left;
}
.rule input:not([type="submit"]) {
  width: 50px;
}
.rule ul {
  padding: 0;
  list-style-type: none;
}
.rule p {
  font-size: 60%;
}
.rule fieldset {
  padding: 2px;
}

tr.inEdit>td:first-child {
  font-weight: bold;
  background: #ff0000;
}

input.season {
  width: 50px;
}

input.name {
  width: 300px;
}

.clear {
  float: none !important;
  height: 0 !important;
  padding: 0 !important;
  clear: both !important;
}
.clear-keep-height {
  float: none !important;
  padding: 0 !important;
  clear: both !important;
}

.browserupgrade {
    margin: 0.2em 0;
    background: #ccc;
    color: #000;
    padding: 0.2em 0;
}

/* auto complete */
#header.autocomplete {
  -webkit-border-bottom-right-radius: 0;
      -moz-border-radius-bottomright: 0;
          border-bottom-right-radius: 0;
}


.ui-autocomplete {
  padding: 0 1px;
  margin: 0;
  margin-top: -2px;
  overflow: hidden;
  background: #525252;
  border: solid 2px #525252;
  -webkit-border-radius: 0;
     -moz-border-radius: 0;
          border-radius: 0;
  -webkit-border-bottom-right-radius: 10px;
   -webkit-border-bottom-left-radius: 10px;
      -moz-border-radius-bottomright: 10px;
       -moz-border-radius-bottomleft: 10px;
          border-bottom-right-radius: 10px;
           border-bottom-left-radius: 10px;
}

.ui-autocomplete .ui-menu-item {
  color: #fff;
}

.ui-autocomplete .ui-menu-item,
.ui-autocomplete .ui-menu-item .ui-state-focus {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 12px;
  border: none;
  -webkit-border-radius: 0;
     -moz-border-radius: 0;
          border-radius: 0;
}
.ui-autocomplete .ui-menu-item.ui-state-focus {
  color: #000;
  background: #ddd;
}

.ui-autocomplete .ui-menu-item:last-child {
  -webkit-border-bottom-right-radius: 8px;
   -webkit-border-bottom-left-radius: 8px;
      -moz-border-radius-bottomright: 8px;
       -moz-border-radius-bottomleft: 8px;
          border-bottom-right-radius: 8px;
           border-bottom-left-radius: 8px;
}

.address span {
  display: block;
  font-size: 16px;
  text-align: center;
}
.seasonEdit > form > ul li label,.adminShows label, .address label, #toolbox label {
  display: inline-block;
  min-width: 85px;
  font-size: 14px;
  font-weight: normal;
}
/* IE10+ hack to remove X */
input.editable::-ms-clear {
    display: none;
}
.qtip-content input.btn-block {
  margin: 3px 0;
}
/* -- zoggy */
/* .show is a reserved class for bootstrap.. */
.list span.show {
  display: inline;
}
.dropdown-menu li > a {
  color: #333;
}
.dropdown-menu li > a:hover > [class^="icon-"], .dropdown-menu li > a:hover > [class*=" icon-"] {
  background-image: url("../images/glyphicons-halflings-white.png");
}
img {
  max-width: none;
  /* fixes IE8 */
}
input, textarea, select, .uneditable-input {
  width: auto;
  color: #000;
}
legend, label, .dropdown-menu form, .qtip-content form {
  margin-bottom: 0;
}
.newSeason label, .qtip-content label {
  margin-bottom: 6px;
}
.page-header {
  border-bottom: 1px solid #ddd;
}
select:focus,
.btn:focus {
  outline: none;
}
.btn:focus,
.btn:active {
  border: 1px solid #4d90fe;
  outline: none;
  -moz-box-shadow: none;
       box-shadow: none;
}
.btn-primary:focus,
.btn-warning:focus,
.btn-danger:focus,
.btn-success:focus,
.btn-info:focus,
.btn-inverse:focus {
  border: 1px solid transparent;
  box-shadow: 0 0 0 1px rgba(255, 255, 255, 0.75) inset;
}
.alert {
  font-size: 15px;
  text-align: center;
}
.navbar .brand {
  padding: 6px 10px;
}
.navbar label {
  color: #333;
}
.navbar .btn-group {
  padding-top: 1px;
  margin-top: 0;
}
.navbar .divider-vertical {
  margin: 0 3px;
}
input[type="image"] {
  width: auto;
}
.navbar-search .search-query {
  -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
          border-radius: 4px;
}
#search-submit {
  position: absolute;
  top: 6px;
  right: 10px;
  display: inline-block;
  width: 14px;
  height: 14px;
  *margin-right: .3em;
  line-height: 14px;
  text-indent: -9999px;
  vertical-align: text-top;
  cursor: pointer;
  background-color: transparent;
  background-image: url("../images/glyphicons-halflings.png");
  background-position: -48px 0;
  background-repeat: no-repeat;
  border: 0 none;
  opacity: 0.75;
}

/*footer inkl "add this"*/

.footer div {
  float: left;
  margin-right: 25px;
}
.footer {
  padding: 15px 0 36px;
  margin: 25px 0 10px;
  border-top: 1px solid #ddd;
}
.footer img.social {
  opacity: .5;
  filter: alpha(opacity=50);
  -webkit-transition: opacity .5s ease-in-out;
     -moz-transition: opacity .5s ease-in-out;
      -ms-transition: opacity .5s ease-in-out;
       -o-transition: opacity .5s ease-in-out;
          transition: opacity .5s ease-in-out;
}
.footer img.social:hover {
  opacity: 1;
  filter: alpha(opacity=100);
}
.share span{
  float: left;
}
.share .st_fblike_hcount {
  width: 96px !important;
  margin-top: -2px !important;
}
.dropdown-menu div.btnWrapper {
  display: block;
  padding: 3px 15px;
  clear: both;
  font-weight: normal;
  line-height: 18px;
  white-space: nowrap;
}

h1 {
  font-size: 36px;
}

